src/test/resources/scripts/language/parser/invalid/cast/badIntCastFun.sbsc
// parser should error at invalid cast

int((): num -> 3.4);

return false;